[EFL] EventSender should mimic CTRL+o emacs shortcut https://bugs.webkit.org/show_bug.cgi?id=97224

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-21
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit/efl:

Fix bad use of temporary object causing wrong editing
callback dumping.

* WebCoreSupport/EditorClientEfl.cpp:
(WebCore::EditorClientEfl::shouldInsertText):

Tools:

Add support for mimicking CTRL+o emacs shortcut in EFL's
EventSender in DumpRenderTree and WebKitTestRunner.

* DumpRenderTree/efl/EventSender.cpp:
(sendKeyDown):
* WebKitTestRunner/efl/EventSenderProxyEfl.cpp:
(WTR::EventSenderProxy::keyDown):

LayoutTests:

Rebaseline editing/input/emacs-ctrl-o.html test now
that EFL's EventSender supports mimicking CTRL+o
emacs keyboard shortcut and unskip the test for
EFL WK2 now that the output matches the one for
EFL WK1.

* platform/efl-wk2/TestExpectations:
* platform/efl/editing/input/emacs-ctrl-o-expected.png:
* platform/efl/editing/input/emacs-ctrl-o-expected.txt:

Canonical link: https://commits.webkit.org/115258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129212 268f45cc-cd09-0410-ab3c-d52691b4dbfc